# RTI

./: .clang-format  .gitmodules  Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Math.hpp  Physics.hpp  README.md  Tri.hpp  Vector3.hpp  main.cpp
_build/: .ninja_deps  .ninja_log  233269.ppm  CMakeCache.txt  Makefile  RTI.cbp  build.ninja  cmake_install.cmake  image.ppm  image2.ppm  old_15115ms.ppm
_build/.cmake/api/v1/reply/: cache-v2-1529427254a91d91abf6.json  cache-v2-3b9119736885e45a9cff.json  cache-v2-58aa7409fc20fbcafeed.json  cache-v2-5ce340707bb51cf5871e.json  cache-v2-704a7a10f89d98816c18.json  cache-v2-8a216b7fcf7ac51b3d91.json  cache-v2-90451f6793803863eecf.json  (+69 more)
_build/lib/glm/: Makefile  cmake_install.cmake  glm.cbp
_build/lib/glm/glm/: Makefile  cmake_install.cmake
_build/lib/tinyobj/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  tinyobjloader-targets.cmake  tinyobjloader.cbp
_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  RTI.cbp  RTI.ilk  build.ninja  cmake_install.cmake  image.ppm
_debug/lib/glm/: Makefile  cmake_install.cmake  glm.cbp
_debug/lib/glm/glm/: Makefile  cmake_install.cmake
_debug/lib/tinyobj/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  tinyobjloader-config-version.cmake  tinyobjloader-targets.cmake  tinyobjloader.cbp
app/include/: AABB.hpp  Application.hpp  BVHNode.hpp  Camera.hpp  Hit.hpp  Math.hpp  ObjLoader.hpp  Object.hpp  Physics.hpp  Ray.hpp  Settings.hpp  Timer.hpp  Tri.hpp  Vector3.hpp
app/src/: AABB.cpp  Application.cpp  Tri.cpp  Vector3.cpp
(+75 files in other folders)
